--- a/.aqua/aqua.yaml
+++ b/.aqua/aqua.yaml
@@ -9,3 +9,5 @@ registries:
     ref: v4.310.0 # renovate: depName=aquaproj/aqua-registry
 packages:
   - name: golangci/golangci-lint@v1.63.4
+  - name: mvdan/gofumpt@v0.7.0
+  - name: daixiang0/gci@v0.13.5
