feat: Add rpc_wraperr linter to check error wrapping
Add new linter `rpc_wraperr` that checks if RPC methods properly wrap errors with `connect.NewError`.

This linter helps ensure that all errors returned from RPC methods are properly wrapped, which is a
common requirement for RPC error handling.

Key features:
- Analyzes function call graphs to track error propagation
- Supports errgroup.Group error handling
- Configurable through command line options and golangci-lint settings
- Can report violations at return instruction or function level

The linter is available as:
- A standalone `go vet` tool
- A golangci-lint custom plugin

Implementation details:
- Uses SSA-based analysis to track error values
- Handles bounded method wrappers and generic instantiations
- Supports strongly connected component analysis for recursive calls

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -94,3 +94,8 @@ issues:
   max-same-issues: 0
   exclude-dirs:
     - bin
+  exclude-rules:
+    - path: pkg/factutil/wrapper.go
+      text: "import 'reflect' is not allowed from list 'main'"
+      linters:
+        - depguard # wrapper needs to use reflect.
