--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,15 +10,36 @@ builds:
     binary: rpc_callvalidate
     env:
       - CGO_ENABLED=0
+  - id: "rpc_wraperr"
+    main: ./cmd/wraperr
+    binary: rpc_wraperr
+    env:
+      - CGO_ENABLED=0
 
 archives:
   - id: "rpc_callvalidate"
-    builds: [ rpc_callvalidate ]
+    builds: [ 'rpc_callvalidate' ]
     formats: [ 'tar.gz' ]
     wrap_in_directory: true
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
       rpc_callvalidate_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    # use zip for windows archives
+    format_overrides:
+      - goos: windows
+        formats: [ 'zip' ]
+  - id: "rpc_wraperr"
+    builds: [ 'rpc_wraperr' ]
+    formats: [ 'tar.gz' ]
+    wrap_in_directory: true
+    # this name template makes the OS and Arch compatible with the results of `uname`.
+    name_template: >-
+      rpc_wraperr_
       {{- title .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
