--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,14 +5,14 @@ before:
     - go mod tidy
 
 builds:
-  - main: ./cmd/rpcguard/
-    id: "rpcguard"
-    binary: rpcguard
+  - main: ./cmd/callvalidate
+    id: "rpc_callvalidate"
+    binary: rpc_callvalidate
     env:
       - CGO_ENABLED=0
 
 archives:
-  - format: tar.gz
+  - formats: [ 'tar.gz' ]
     wrap_in_directory: true
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
@@ -25,7 +25,7 @@ archives:
     # use zip for windows archives
     format_overrides:
       - goos: windows
-        format: zip
+        formats: [ 'zip' ]
 
 changelog:
   sort: asc
