--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,18 +5,20 @@ before:
     - go mod tidy
 
 builds:
-  - main: ./cmd/callvalidate
-    id: "rpc_callvalidate"
+  - id: "rpc_callvalidate"
+    main: ./cmd/callvalidate
     binary: rpc_callvalidate
     env:
       - CGO_ENABLED=0
 
 archives:
-  - formats: [ 'tar.gz' ]
+  - id: "rpc_callvalidate"
+    builds: [ rpc_callvalidate ]
+    formats: [ 'tar.gz' ]
     wrap_in_directory: true
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
-      {{ .ProjectName }}_
+      rpc_callvalidate_
       {{- title .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
