--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,25 +1,24 @@
 version: 2
-
 before:
   hooks:
     - go mod tidy
-
 builds:
-  - id: "rpc_callvalidate"
+  - id: rpc_callvalidate
     main: ./cmd/callvalidate
     binary: rpc_callvalidate
     env:
       - CGO_ENABLED=0
-  - id: "rpc_wraperr"
+  - id: rpc_wraperr
     main: ./cmd/wraperr
     binary: rpc_wraperr
     env:
       - CGO_ENABLED=0
-
 archives:
-  - id: "rpc_callvalidate"
-    builds: [ 'rpc_callvalidate' ]
-    formats: [ 'tar.gz' ]
+  - id: rpc_callvalidate
+    ids:
+      - rpc_callvalidate
+    formats:
+      - tar.gz
     wrap_in_directory: true
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
@@ -32,10 +31,13 @@ archives:
     # use zip for windows archives
     format_overrides:
       - goos: windows
-        formats: [ 'zip' ]
-  - id: "rpc_wraperr"
-    builds: [ 'rpc_wraperr' ]
-    formats: [ 'tar.gz' ]
+        formats:
+          - zip
+  - id: rpc_wraperr
+    ids:
+      - rpc_wraperr
+    formats:
+      - tar.gz
     wrap_in_directory: true
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
@@ -48,14 +50,13 @@ archives:
     # use zip for windows archives
     format_overrides:
       - goos: windows
-        formats: [ 'zip' ]
-
+        formats:
+          - zip
 changelog:
   sort: asc
   filters:
     exclude:
-      - "^docs:"
-      - "^test:"
-
+      - '^docs:'
+      - '^test:'
 announce:
   skip: "true"
