--- a/.aqua/aqua.yaml
+++ b/.aqua/aqua.yaml
@@ -6,8 +6,9 @@ checksum:
   require_checksum: true
 registries:
   - type: standard
-    ref: v4.345.0 # renovate: depName=aquaproj/aqua-registry
+    ref: v4.354.0
 packages:
-  - name: golangci/golangci-lint@v2.1.1
+  - name: golangci/golangci-lint@v2.1.5
   - name: mvdan/gofumpt@v0.8.0
   - name: daixiang0/gci@v0.13.6
+  - name: suzuki-shunsuke/pinact@v3.0.5
